<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/bg_transparent"></LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding_content"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="200dp"
                    android:layout_height="40dp"
                    android:background="@drawable/ic_logo_options"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/magrin_top"/>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/magrin_top"
                        android:textSize="30sp"
                        android:textColor="@color/black"
                        android:text="@string/pay"
                        android:layout_centerVertical="true"/>
                    <TextView
                        android:id="@+id/tvAmount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="@dimen/magrin_top"
                        android:textSize="30sp"
                        android:textColor="@color/black"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"/>
                </RelativeLayout>


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/name_on_card"
                    android:layout_marginTop="@dimen/magrin_top"
                    android:textSize="@dimen/text_size_title_item_input"/>

                <EditText
                    android:id="@+id/edtNameOnCard"
                    style="@style/style_edt_item"
                    android:maxLength="16"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/card_number"
                    android:layout_marginTop="@dimen/magrin_top"
                    android:textSize="@dimen/text_size_title_item_input"/>

                <EditText
                    android:id="@+id/tvCardNumber"
                    style="@style/style_edt_item"
                    android:inputType="number"/>

                <TextView
                    android:visibility="gone"
                    android:id="@+id/tvNoticeInput"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/enter_16_degit"
                    android:textColor="@color/red_notice"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="20dp">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:focusable="false"
                        android:textSize="@dimen/text_size_title_item_input"
                        android:text="@string/expiry_date"/>
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/security_code"
                        android:textSize="@dimen/text_size_title_item_input"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/tvExpiryDate"
                        android:layout_width="0dp"
                        android:layout_height="@dimen/height_input"
                        android:layout_weight="1"
                        android:background="@drawable/round_with_border"
                        android:focusable="false"
                        android:hint="mm/yy"
                        android:gravity="center"/>
                    <RelativeLayout
                        android:layout_width="0dp"
                        android:layout_height="@dimen/height_input"
                        android:layout_weight="1"
                        android:background="@drawable/round_with_border">
                        <EditText
                            android:id="@+id/tvSecurityCode"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:singleLine="true"
                            android:layout_toLeftOf="@+id/ivQuestion"
                            android:gravity="center"
                            android:background="@null"
                            android:inputType="number"/>
                        <ImageView
                            android:id="@+id/ivQuestion"
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:layout_alignParentRight="true"
                            android:layout_centerVertical="true"
                            android:layout_marginRight="10dp"
                            android:layout_marginLeft="10dp"
                            android:src="@drawable/ic_question"/>
                    </RelativeLayout>
                </LinearLayout>
            </LinearLayout>
            <TextView
                android:id="@+id/tvError"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/red_notice"
                android:background="@drawable/bg_rounder_error"
                android:text="@string/the_credit_error"
                android:padding="30dp"
                android:visibility="gone"/>
            <LinearLayout
                android:id="@+id/llPay"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:background="@drawable/ripple_background"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:orientation="horizontal"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:gravity="center">
                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:background="@drawable/ic_lock"
                    android:layout_marginRight="@dimen/margin_options_payment"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:text="@string/pay"
                    android:layout_marginRight="@dimen/margin_options_payment"
                    android:textSize="@dimen/text_size_20sp"/>
            </LinearLayout>
        </LinearLayout>

    </RelativeLayout>

</ScrollView>